@@ -53,6 +53,7 @@ PART
 	{
 		name = RadarWarningReceiver
 		omniDetection = true
+		fieldOfView = 360
 	}
 
 	MODULE
