@@ -45,6 +45,7 @@ namespace BDArmory.Radar
         //for if the RWR should detect everything, or only be able to detect radar sources
         [KSPField(isPersistant = true)] public bool omniDetection = true;
 
+        [KSPField] public float fieldOfView = 360;
         // This field was added to separate RWR active status from the display of the RWR.  the RWR should be running all the time...
         public bool displayRWR = false;
         internal static bool resizingWindow = false;
