@@ -14,6 +14,8 @@
 	- Open sections of the AI GUI now remain open when switching between flight and editor.
 	- Competition UI text in the upper left corner now properly scales when adjusting UI_SCALE.
 	- Add ability to set teams' Allies to the Team Selector GUI.
+- Detectors:
+	- Fix AI not popping countermeasures for non-radar incoming missiles detected by RWR but outside visual range.
 -Countermeasures:
 	- Fix NRE from countermeasure droppers missing a ejectTransform in the .cfg.
 	- Fix Acousic Decoy launcher launch direction.
